--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -9,6 +9,12 @@ $cyan: hsl(178, 100%, 50%);
     transition: all 0.3s ease-in-out;
 }
 
+@mixin media-lg {
+    @media only screen and (min-width: 1000px) {
+        @content;
+    }
+}
+
 $bold: 600;
 $med: 400;
 $light: 300;
