--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,4 @@
-@import "config", "card";
+@import "config", "card", "responsive";
 @import url("https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap");
 
 * {
