--- a/scss/_card.scss
+++ b/scss/_card.scss
@@ -7,100 +7,147 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
 	&__content {
 		width: 85%;
-        height: 100%;
+		height: 100%;
 
 		figure {
 			width: 100%;
-            margin-top: 1.5rem;
+			margin-top: 1.5rem;
+			position: relative;
+			border-radius: 3%;
 
 			img {
 				width: 100%;
-                border-radius: 4%;
+				border-radius: 4%;
+			}
+
+			.overlay {
+				position: absolute;
+				top: 0;
+				width: 100%;
+				height: 100%;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+
+				img {
+					width: 1.7rem;
+					z-index: 2;
+					opacity: 0;
+					@include transition-ease;
+				}
+			}
+
+			&::after {
+				content: "";
+				position: absolute;
+				background-color: $cyan;
+				top: 0;
+				width: 100%;
+				height: 98%;
+				border-radius: 4%;
+				opacity: 0;
+				z-index: 1;
+				@include transition-ease;
+			}
+
+			&:hover {
+				img,
+				&::after {
+					cursor: pointer;
+				}
+
+				img {
+					opacity: 1;
+				}
+
+				&::after {
+					opacity: 0.7;
+				}
 			}
 		}
 
 		h2 {
 			color: #fff;
 			font-weight: $bold;
-            margin: 1.2rem 0 1rem 0;
-            font-size: 1.3rem;
-            @include transition-ease;
+			margin: 1.2rem 0 1rem 0;
+			font-size: 1.3rem;
+			@include transition-ease;
 
-                &:hover {
-                    color: $cyan;
-                    cursor: pointer;
-                }
+			&:hover {
+				color: $cyan;
+				cursor: pointer;
+			}
 		}
 
-        p {
-            color: $soft-blue;
-            font-weight: $light;
-            font-size: 0.88rem;
-        }
+		p {
+			color: $soft-blue;
+			font-weight: $light;
+			font-size: 0.88rem;
+		}
 
 		.price-and-time {
 			display: flex;
 			width: 100%;
 			justify-content: space-between;
-            padding: 1.4rem 0 1.2rem 0;
-            border-bottom: 1.1px solid $dark-blue-line;
+			padding: 1.4rem 0 1.2rem 0;
+			border-bottom: 1.1px solid $dark-blue-line;
 
 			.price,
-            .time {
+			.time {
 				display: flex;
 			}
 
-            .price {
-                h6 {
-                    font-size: 13px;
-                    font-weight: $med;
-                    color: $cyan;
-                    margin-left: 0.3rem;
-                }
-            }
+			.price {
+				h6 {
+					font-size: 13px;
+					font-weight: $med;
+					color: $cyan;
+					margin-left: 0.3rem;
+				}
+			}
 
-            .time {
-                p {
-                    margin-left: 0.4rem;
-                    font-size: 13px;
-                }
-            }
+			.time {
+				p {
+					margin-left: 0.4rem;
+					font-size: 13px;
+				}
+			}
 
-            img {
-                height: 16px;
-            }
+			img {
+				height: 16px;
+			}
 		}
 
-        .creator {
-            display: flex;
-            margin-top: 1rem;
-            font-weight: $light;
+		.creator {
+			display: flex;
+			margin-top: 1rem;
+			font-weight: $light;
 
-            .pfp {
-                width: 2rem;
-                border: 1px solid white;
-                border-radius: 100%;
-                margin-left: 0.3rem;
-            }
+			.pfp {
+				width: 2rem;
+				border: 1px solid white;
+				border-radius: 100%;
+				margin-left: 0.3rem;
+			}
 
-            p {
-                margin-left: 1rem;
-                margin-top: 0.5rem;
+			p {
+				margin-left: 1rem;
+				margin-top: 0.5rem;
 
-                span {
-                    color: #fff;
-                    @include transition-ease;
+				span {
+					color: #fff;
+					@include transition-ease;
 
-                    &:hover {
-                        color: $cyan;
-                        cursor: pointer;
-                    }
-                }
-            }
-        }
+					&:hover {
+						color: $cyan;
+						cursor: pointer;
+					}
+				}
+			}
+		}
 	}
 }
