--- a/css/main.css
+++ b/css/main.css
@@ -177,7 +177,7 @@
 @media only screen and (min-width: 1000px) {
   .card {
     height: 425px;
-    width: 24.6%;
+    width: 268px;
   }
   .card__content {
     width: 88%;
