--- a/css/main.css
+++ b/css/main.css
@@ -220,6 +220,26 @@
     margin-top: 0.4rem;
     margin-left: 0.7rem;
   }
+  .attribution {
+    font-size: 1.5rem;
+  }
+}
+
+.attribution {
+  position: fixed;
+  bottom: 0;
+  color: #fff;
+  font-size: 0.8rem;
+}
+
+.attribution a {
+  color: #00fff7;
+}
+
+.attribution a:hover {
+  color: #8bacda;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 
 * {
