--- a/css/main.css
+++ b/css/main.css
@@ -38,56 +38,6 @@
   border-radius: 4%;
 }
 
-.card__content figure .overlay {
-  position: absolute;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.card__content figure .overlay img {
-  width: 1.7rem;
-  z-index: 2;
-  opacity: 0;
-  -webkit-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-}
-
-.card__content figure::after {
-  content: "";
-  position: absolute;
-  background-color: #00fff7;
-  top: 0;
-  width: 100%;
-  height: 98%;
-  border-radius: 4%;
-  opacity: 0;
-  z-index: 1;
-  -webkit-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-}
-
-.card__content figure:hover img, .card__content figure:hover::after {
-  cursor: pointer;
-}
-
-.card__content figure:hover img {
-  opacity: 1;
-}
-
-.card__content figure:hover::after {
-  opacity: 0.7;
-}
-
 .card__content h2 {
   color: #fff;
   font-weight: 600;
@@ -223,6 +173,56 @@
   .attribution {
     font-size: 1.5rem;
   }
+}
+
+figure .overlay {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+figure .overlay img {
+  width: 1.7rem;
+  z-index: 2;
+  opacity: 0;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+figure::after {
+  content: "";
+  position: absolute;
+  background-color: #00fff7;
+  top: 0;
+  width: 100%;
+  height: 98%;
+  border-radius: 4%;
+  opacity: 0;
+  z-index: 1;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+figure:hover img, figure:hover::after {
+  cursor: pointer;
+}
+
+figure:hover img {
+  opacity: 1;
+}
+
+figure:hover::after {
+  opacity: 0.7;
 }
 
 .attribution {
