--- a/css/main.css
+++ b/css/main.css
@@ -204,6 +204,7 @@ figure::after {
   position: absolute;
   background-color: #00fff7;
   top: 0;
+  left: 0;
   width: 100%;
   height: 98%;
   border-radius: 4%;
