--- a/scss/_overlay.scss
+++ b/scss/_overlay.scss
@@ -21,6 +21,7 @@ figure {
 		position: absolute;
 		background-color: $cyan;
 		top: 0;
+		left: 0;
 		width: 100%;
 		height: 98%;
 		border-radius: 4%;
